--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <header>
                                 <h1>Chii's Cat Grass에 오신 것을 환영합니다!</h1><br />
                                 <p>Contact Me(Discord ID): <a href="">0dBFS</a><br />
-								<del>여기는 언제 제대로 활용해볼까</del></p>
+								<del></del></p>
                             </header>
 							<section class="tiles">
 								<article class="style2">	
