--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
 										<div class="content">
 											<p>Mac Mini 2018 (Core i7)<br />
 												Macbook Pro 13'' 2020<br />
-											(Apple Silicon M1)
+											(Apple Silicon M1) <br />
+											i5 - 12400F, RTX 4060 Desktop
 											</p>
 										</div>
 									
