--- a/3d_kr/index.html
+++ b/3d_kr/index.html
@@ -36,7 +36,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Download</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Blog</span>
 								</a>
 
 							<!-- Nav -->
