--- a/3d_kr/index.html
+++ b/3d_kr/index.html
@@ -78,7 +78,7 @@
 									<h1>#LIST</h1>
 									<!-- <div class="row"> -->
 										<div class="col-6 col-12-medium">
-											<h3>General</h3>
+											<h3>Unity</h3>
 											<ul class="alt">
 											<li><a href="unity_1.html">Unity 1편 / Last Update: 2024.11.21</a></li>
 											</ul>
