--- a/3d_kr/unity_1.html
+++ b/3d_kr/unity_1.html
@@ -77,7 +77,7 @@
 			<div id="main">
 				<div class="inner">
 					<h1>#Unity.3D / 1</h1>
-					<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+					<span class="image main"><img src="images/untsf.png" alt="" /></span>
 					<h3>0. 들어가며</h3>
 					<p>우리는 앞으로 Unity를 이용하여 3D 인체 모델의 의상을 변경하고, 소위 '뚜따'라고 불리우는 과정을 진행할 예정이다. 필자는 Unity를 게임 엔진으로서 다루어본 적만 있기 때문에 이 글을 작성하며 같이 공부해 볼 것이다.<br />
 					* 그럴 상황은 없을 거라고 생각하지만 만일 오류가 생겼다면 최대한 내가 코딩을 잘 모른다는 가정 하에 troubleshooting 과정을 밟을 것이다.</p>
