--- a/3d_kr/index.html
+++ b/3d_kr/index.html
@@ -81,6 +81,7 @@
 											<h3>Unity</h3>
 											<ul class="alt">
 											<li><a href="unity_1.html">Unity 1편 / Last Update: 2024.11.21</a></li>
+											<li><a href="">Unity 2편(Work In Progress) / Last Update: null</a></li>
 											</ul>
 										</div>
 								</section>
