--- a/3d_kr/unity_2.html
+++ b/3d_kr/unity_2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Cat Grass | Unity 1편</title>
+	<title>Cat Grass | Blog.3D</title>
 	<meta charset="utf-8" />
 	<meta name="description" content="wow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -76,11 +76,12 @@
 			<!-- Main -->
 			<div id="main">
 				<div class="inner">
-					<h1>#Unity.3D / 1편. VCC 세팅하기</h1>
+					<h1>#Unity.3D / 2편. Asset 불러오기</h1>
 					<span class="image main"><img src="images/untsf.png" alt="" /></span>
-					<h3>0. 들어가며</h3>
-					<p>우리는 앞으로 Unity를 이용하여 3D 인체 모델의 의상을 변경하고, 소위 '뚜따'라고 불리우는 과정을 진행할 예정이다. 필자는 Unity를 게임 엔진으로서 다루어본 적만 있기 때문에 이 글을 작성하며 같이 공부해 볼 것이다.<br />
-					* 그럴 상황은 없을 거라고 생각하지만 만일 오류가 생겼다면 최대한 내가 코딩을 잘 모른다는 가정 하에 troubleshooting 과정을 밟을 것이다.</p>
+					<h3>1. Project 열기</h3>
+					<p>
+						<img src="images/unt_3d_11.png" alt="" class="fixed-vi" /><br /><br />
+						1편에서 세팅한 프로젝트를 열어 보면, 당연하겠지만 텅 비어 있다. 따라서 이제 이 프로젝트를 가득 채워줄 에셋들을 불러올 것이다. 
 
 					<p><h3>1. 배경 지식</h3></p>
 					<p>
