--- a/3d_kr/unity_1.html
+++ b/3d_kr/unity_1.html
@@ -145,7 +145,7 @@
 									</tr>
 									<tr>
 										<td>Specular Map</td>
-										<td>물체 표변의 반사광을 제어하는 Texture.</td>
+										<td>물체 표면의 반사광을 제어하는 Texture.</td>
 									</tr>
 									<tr>
 										<td>Shader(쉐이더)</td>
