--- a/3d_kr/unity_1.html
+++ b/3d_kr/unity_1.html
@@ -89,10 +89,11 @@
 					</p>
 					<p>
 						본체를 구성하는 요소 중 얼굴 및 신체는 기본이 되는 모델이 따로 있다. 대표적으로 Manuka, Moe, Mint, Chiffon 등으로 상당히 많다.<br />
-						이 기본 모델을 수정하는 '뚜따' 과정을 거치면 자신만의 아바타를 소유할 수 있게 되는 것이다.(아래는 의상 수정의 예시이나,실제로는 체형, 얼굴, 눈 색, 헤어스타일 등 많은 부분의 수정이 가능하다.)<br />
-
+						이 기본 모델을 수정하는 '뚜따' 과정을 거치면 자신만의 아바타를 소유할 수 있게 되는 것이다.<br />
 					<img src="images/unt_3d_1_before.png" alt="" class="fixed-size"/>
-					<img src="images/unt_3d_1_after.png" alt="" class="fixed-size"/></p>
+					<img src="images/unt_3d_1_after.png" alt="" class="fixed-size"/><br />
+					대표적인 의상 Asset 수정 예시.(Before -> After) 여기서는 의상 교체 예시를 참고자료로 사용했으나, 헤어스타일, 얼굴 등 다른 요소들 또한 교체 및 수정 작업이 가능하다.
+				</p>
 
 					<h3>2. 용어 정립</h3>
 					<p>
