--- a/3d_kr/unity_2.html
+++ b/3d_kr/unity_2.html
@@ -65,11 +65,11 @@
 			<nav id="menu">
 				<h2>Menu</h2>
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="aboutme.html">About Me</a></li>
-					<li><a href="download.html">Download</a></li>
+					<li><a href="https://knmango.github.io/index.html">Home</a></li>
+					<li><a href="https://knmango.github.io/aboutme.html">About Me</a></li>
+					<li><a href="https://knmango.github.io/download.html">Download</a></li>
 					<li><a href="https://blog.naver.com/eunho0815">Naver Blog</a></li>
-					<li><a href="list.html">Blog(Unity)</a></li>
+					<li><a href="https://knmango.github.io/3d_kr/index.html">Blog(Unity)</a></li>
 				</ul>
 			</nav>
 
