--- a/index.html
+++ b/index.html
@@ -108,10 +108,13 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="https://undertale.com/">
-										<h2>Undertale</h2>
+									<a>
+										<h2>Secret</h2>
 										<div class="content">
-											<p>와샌즈파피루스언더테일아시는구나</p>
+											<p>
+											여기 어딘가에<br />
+											숨겨진 무언가가 있을 수도?
+											</p>
 										</div>
 									</a>
 								</article>
@@ -122,8 +125,8 @@
 									<a>
 										<h2>Server</h2>
 										<div class="content">
-											<p>Minecraft Bedrok Server와<br />
-											일본 IPSec VPN을<br />
+											<p>FTP 서버와 Minecraft 서버,<br />
+											일본 L2TP/IPSec VPN을<br />
 											한정적으로 제공하고 있습니다.</p>
 										</div>
 									</a>
