--- a/3d_kr/unity_1.html
+++ b/3d_kr/unity_1.html
@@ -174,8 +174,9 @@
 						현재 VCC의 권장 버전은 Unity 2022.3.22f1이다. 해당하는 버전의 Unity가 설치되어 있다는 가정 하에, 일단 Create New Project를 선택하여 새 프로젝트를 만들어 보자.<br />
 						Unity 2022 Avatar Project를 선택하고, 프로젝트 이름과 저장 경로를 마음에 드는 곳으로 지정해 준다.
 						<img src="images/unt_3d_4.png" alt="" class="fixed-vi" /><br /><br />
-						Unity 2022 Avatar Project를 선택하고, 프로젝트 이름과 저장 경로를 마음에 드는 곳으로 지정해 준다.
-						지금 우리가 사용할 모델은 liltoon 쉐이더를 사용하는 것 같다. liltoon 쉐이더는 기본적으로 VCC에서 제공하는 컴포넌트가 아니기에 수동으로 추가해 주어야 한다.<br />
+						Unity 2022 Avatar Project를 선택하고, 프로젝트 이름과 저장 경로를 마음에 드는 곳으로 지정해 준다.<br />
+						무사히 프로젝트를 생성했다면, 이제 프로젝트에서 사용할 컴포넌트(추가 기능)를 설치해 주어야 한다.<br />
+						먼저 쉐이더부터 설치해 보자. 지금 우리가 사용할 에셋은 liltoon 쉐이더를 사용하는 것 같다. 다만 liltoon 쉐이더는 기본적으로 VCC에서 제공하는 컴포넌트가 아니기에 수동으로 추가해 주어야 한다.<br />
 						<img src="images/unt_3d_5.png" alt="" class="fixed-vi" /><br />
 						<img src="images/unt_3d_6.png" alt="" class="fixed-vi" /><br /><br />
 						Settings -> Packages -> Add Repository 순으로 클릭하고, <u>https://lilxyzw.github.io/vpm-repos/vpm.json</u> URL을 붙여넣고 Add 버튼을 클릭한다.<br />
