--- a/3d_kr/index.html
+++ b/3d_kr/index.html
@@ -69,7 +69,9 @@
 
 							<!-- Text -->
 								<section>
-									<p>Unity 3D용 외부 검색 불가한 비공개 게시판입니다.<br />
+									<p>
+										Unity 3D용 외부 검색 불가 게시판입니다.<br />
+										방송용 모델의 외부 유출을 막기 위한 비공개 게시판이므로 안심해 주세요. 
                                     <del></del></p>
 									<hr />
                                 </section>
@@ -80,7 +82,7 @@
 										<div class="col-6 col-12-medium">
 											<h3>Unity</h3>
 											<ul class="alt">
-											<li><a href="unity_1.html">Unity 1편 / Last Update: 2024.11.21</a></li>
+											<li><a href="unity_1.html">Unity 1편 / Last Update: 2024.11.23</a></li>
 											<li><a href="">Unity 2편(Work In Progress) / Last Update: null</a></li>
 											</ul>
 										</div>
