--- a/3d_kr/index.html
+++ b/3d_kr/index.html
@@ -83,7 +83,7 @@
 											<h3>Unity</h3>
 											<ul class="alt">
 											<li><a href="unity_1.html">Unity 1편 / Last Update: 2024.11.23</a></li>
-											<li><a href="">Unity 2편(Work In Progress) / Last Update: null</a></li>
+											<li><a href="unity_2.html">Unity 2편 / Last Update: 2024.11.28</a></li>
 											</ul>
 										</div>
 								</section>
