--- a/3d_kr/unity_3.html
+++ b/3d_kr/unity_3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Cat Grass | Blog.3D</title>
+	<title>Cat Grass | Unity 3편</title>
 	<meta charset="utf-8" />
 	<meta name="description" content="wow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -99,7 +99,7 @@
 						저번 시간까지 진행을 완료한 프로젝트의 모습이다.<br />
 						<img src="images/unt_3d_25.png" alt="" class="fixed-vi"/><br />
 						의상 두 개를 저번 시간에 했던 것처럼 하이어라키로 드래그해서 가져와 보자. 의상 색 바리에이션이 많던데 사용할 색으로 가져오면 될 것 같다. 필자는 일단 필자 취향대로 가도록 하겠다.<br /><br />
-						
+
 
 					<h3>2. 뜯어보기</h3>
 					<p>
