너 수정했잖아

--- a/3d_kr/unity_3.html
+++ b/3d_kr/unity_3.html
@@ -126,7 +126,7 @@
 						다음으로 Left Leg와 Right Leg를 아바타의 Left Leg, Right Leg 하위로 옮겨준다.<br /><br />
 						<img src="images/unt_3d_37.png"/> (옮기기 전)<br />
 						<img src="images/unt_3d_38.png"/> (옮긴 후)<br />
-						이로서 하의는 끝났고, 다음은 상의의 시작인 Spine이다. 똑같이 하위로 옮겨준다.<br /><br />
+						이로써 하의는 끝났고, 다음은 상의의 시작인 Spine이다. 똑같이 하위로 옮겨준다.<br /><br />
 						<img src="images/unt_3d_39.png"/> (옮기기 전)<br />
 						<img src="images/unt_3d_40.png"/> (옮긴 후)<br />
 						Chest도 옮겨주고...<br /><br />
