--- a/3d_kr/unity_3.html
+++ b/3d_kr/unity_3.html
@@ -86,7 +86,7 @@
 					<h1>#Unity.3D / 3편. 실제 작업 들어가기</h1>
 					<h3>0. 오늘 할 것</h3>
 					<p>
-						드디어 교체 작업을 해볼 것이다. 본래 2주는 일찍 끝났어야 할 간단한 것이었는데, 필자 집안 사정이나 여타 예상치 못한 부분 때문에 많이 딜레이되어 이번 3편에서 두 의상 모두 붙여볼 것이다.<br />
+						드디어 교체 작업을 진행할 예정이다. 본래 2주는 일찍 끝났어야 할 간단한 작업이었는데, 필자 집안 사정이나 여타 예상치 못한 부분 때문에 많이 딜레이되어 이번 3편에서 두 의상 모두 붙여볼 것이다.<br />
 						<img src="images/unt_3d_1_before.png" alt="" class="fixed-size"/>
 						<img src="images/unt_3d_1_after.png" alt="" class="fixed-size"/><br />
 						(두 번이나 자료로 등장했던 Before -> After 사진)
@@ -115,8 +115,8 @@
 						위 과정이 문제없이 완료되면 이러한 모습일 것이다. 겉으로 보이기엔 제대로 의상이 입혀져 있는 것 같지만 사실은 아니다. 몸과 옷이 따로 놀고 있기 때문에, 몸을 움직이면 옷은 고정된 채로 공중부양하게 될 것이다.
 						따라서 우리는 옷을 몸에 종속시키는 작업을 통해 몸의 움직임을 옷이 따라가도록 해야만 한다.<br /><br />
 						<img src="images/unt_3d_31.png"/><br />
-						Coffee Knit의 하위 요소를 보면 Armature가 존재할 것인데, 이걸 열어보면 최상위에 Hips가 자리하고 있을 것이다. 이걸 바로 아바타에 넣게 되면 식별하는 데에 어려움이 있기 때문에, 넣기 전에 미리 이름을 수정할 것이다.
-						Naming Convention(작명 규칙)은 기존에 붙어있던 의상과 동일하게 진행할 것이다.<br /><br />
+						Coffee Knit의 하위 요소를 보면 Armature가 존재하는데, 이걸 열어보면 최상위에 Hips가 자리하고 있을 것이다. 이걸 바로 아바타에 넣게 되면 식별하는 데에 어려움이 있기 때문에 넣기 전에 미리 이름을 수정해줄 예정이다.
+						Naming Convention(작명 규칙)은 기존에 붙어있던 의상과 동일하게 진행하겠다.<br /><br />
 						<img src="images/unt_3d_33.png"/><br />
 						기존 의상의 작명 규칙은 [(의상명) + _ + (부위명)] 이었으니, 필자 또한 동일하게 진행하였다. 다만 의상 이름이 길어 KN으로 임의적으로 줄여 사용하였으니 양해 바란다.<br /><br />
 						<img src="images/unt_3d_34.png"/><br />
@@ -135,7 +135,7 @@
 						Left, Right shoulder도 옮겨주고...<br /><br />
 						<img src="images/unt_3d_43.png"/> (옮기기 전)<br />
 						<img src="images/unt_3d_44.png"/> (옮긴 후)<br />
-						Neck도 옮겨주면 끝이다. 이로서 상의도 끝났고, Cofee Knit는 이제 다 붙인 것이다.<br /><br />
+						Neck도 옮겨주면 끝이다. 이로서 상의도 끝났고, Cofee Knit는 이제 다 붙었다고 보면 된다.<br /><br />
 						<img src="images/unt_3d_45.png"/> <img src="images/unt_3d_46.png"/><br />
 						다 끝났으니 의상 본체를 아바타 패키지 내로 옮겨주자.
 
