--- a/3d_kr/unity_3.html
+++ b/3d_kr/unity_3.html
@@ -96,7 +96,7 @@
 					<p>
 						<img src="images/unt_3d_24.png" alt="" class="fixed-vi"/><br />
 						저번 시간까지 진행을 완료한 프로젝트의 모습이다.<br />
-						<img src="images/unt_3d_25.png" alt="" class="fixed-vi"/><br />
+						<img src="images/unt_3d_25.png"/><br />
 						의상 두 개를 저번 시간에 했던 것처럼 하이어라키로 드래그해서 가져와 보자. 의상 색 바리에이션이 많던데 사용할 색으로 가져오면 될 것 같다. 필자는 일단 필자 취향대로 가도록 하겠다.<br /><br />
 						보통 하이어라키로 드래그해서 가져오게 되면 Position이 0, 0, 0 좌표로 설정되어 있을 것이다. 가장 상위 Parent를 선택하면 Position, Scale, Rotation 값을 볼 수 있다.<br />
 						<img src="images/unt_3d_26.png" alt="" class="fixed-vi"/><br /><br />
